--- a/basics-05-object-types/tsconfig.json
+++ b/basics-05-object-types/tsconfig.json
@@ -109,6 +109,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude" : [
-    "analytics.dev.ts"
+    "node_modules"
   ]
+  //node_modules is by default excluded
 }
